# blockwatch

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CLAUDE.md  Cargo.toml  README.md  action.yml  dist-workspace.toml  release.toml
.agents/.claude-plugin/: plugin.json
.agents/skills/blockwatch/: SKILL.md
.claude-plugin/: marketplace.json
.github/: dependabot.yml
.github/workflows/: blockwatch.yml  codeql.yml  release.yml  rust.yml
fuzz/: Cargo.toml  README.md  run.sh
fuzz/in/: seed
fuzz/src/: parser_fuzz.rs
scripts/: check_latest_gpt_nano_model.lua
src/: block_parser.rs  blocks.rs  checker.rs  diff_parser.rs  differ.rs  flags.rs  lib.rs  main.rs  tag_parser.rs
src/language_parsers/: bash.rs  c.rs  c_sharp.rs  cmake.rs  cpp.rs  css.rs  dart.rs  dockerfile.rs  elixir.rs  go.rs  graphql.rs  groovy.rs  hcl.rs  html.rs  java.rs  javascript.rs  kotlin.rs  lua.rs  makefile.rs  markdown.rs  mod.rs  nix.rs  php.rs  proto.rs  python.rs  ruby.rs  rust.rs  scala.rs  sql.rs  starlark.rs  swift.rs  toml.rs  tsx.rs  typescript.rs  xml.rs  yaml.rs
src/parsers/: bash.rs  c.rs  c_sharp.rs  cpp.rs  css.rs  go.rs  html.rs  java.rs  javascript.rs  kotlin.rs  makefile.rs  markdown.rs  mod.rs  php.rs  python.rs  ruby.rs  rust.rs  sql.rs  swift.rs  tag_parser.rs  toml.rs  tsx.rs  typescript.rs  xml.rs  yaml.rs
src/validators/: affects.rs  check_ai.rs  check_lua.rs  keep_sorted.rs  keep_unique.rs  line_count.rs  line_pattern.rs  mod.rs
tests/: affects.rs  check_ai.rs  check_ai_test.py  check_lua.rs  custom_file_extension_test.javascript  disabled_test.py  general.rs  integration_main.rs  keep_sorted.rs  keep_sorted_test.py  keep_unique.rs  keep_unique_test.py  line_count.rs  line_pattern.rs  line_pattern_test.py  list.rs  severity_test.py  testing_data.md
tests/common/: mod.rs
tests/testdata/: affects.py  check_lua.py  check_lua_affects.lua  check_lua_affects.py  check_lua_affects_drift.py  check_lua_echo.lua  check_lua_fail.lua  check_lua_mode.py  check_lua_os.lua  check_lua_pattern.py  check_lua_validate.lua  custom_file_extension.python  keep_sorted.py  line_count.py
tests/testdata/list/: a.py  b.py
tests/testdata/paths/: invalid.py  valid.py
tests/testdata/paths/subdir/: nested_invalid.py
