[package]
name = "blockwatch"
version = "0.2.16"
edition = "2024"
repository = "https://github.com/mennanov/blockwatch"
description = "Language agnostic linter that keeps your code and documentation in sync and valid"
homepage = "https://github.com/mennanov/blockwatch"
license = "MIT"

[dependencies]
anyhow = "1.0"
async-openai = { version = "0.31", features = ["completion-types", "chat-completion"] }
async-trait = "0.1"
clap = { version = "4.5", features = ["cargo", "derive"] }
globset = "0.4.18"
html-escape = "0.2"
ignore = "0.4"
itertools = "0.14"
regex = "1.12"
secrecy = "0.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
similar = { version = "2.7" }
strum = "0.27"
strum_macros = "0.27"
tokio = { version = "1.48", features = ["full"] }
tree-sitter = "0.25"
tree-sitter-bash = "0.25"
tree-sitter-c = "0.24"
tree-sitter-c-sharp = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-css = "0.25"
tree-sitter-go = "0.25"
tree-sitter-html = "0.23"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-make = "1.1"
tree-sitter-md = "0.5"
tree-sitter-php = "0.24"
tree-sitter-python = "0.25"
tree-sitter-ruby = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-sequel = "0.3"
tree-sitter-swift = "0.7"
tree-sitter-toml-ng = "0.7"
tree-sitter-typescript = "0.23"
tree-sitter-xml = "0.7"
tree-sitter-yaml = "0.7"
unidiff = "0.4"

[dev-dependencies]
assert_cmd = "2.1"
axum = "0.8"
predicates = "3.1"

[profile.dist]
inherits = "release"
lto = "thin"
