[package]
name = "blockwatch"
version = "0.3.3"
edition = "2024"
repository = "https://github.com/mennanov/blockwatch"
description = "Language agnostic linter that keeps your code and documentation in sync and valid"
homepage = "https://github.com/mennanov/blockwatch"
license = "MIT"
keywords = ["linter", "sync", "drift", "comments", "agents"]
categories = ["development-tools", "command-line-utilities"]

[workspace]
members = ["fuzz"]
# Only build/test the blockwatch crate by default. The `fuzz` member (and its
# heavy `afl` dependency) is opt-in via `-p fuzz` / `--workspace`, so plain
# `cargo build` and `cargo test` never compile it.
default-members = ["."]

[dependencies]
anyhow = "1.0"
async-openai = { version = "0.40", features = [
    "completion-types",
    "chat-completion",
] }
async-trait = "0.1"
clap = { version = "4.6", features = ["cargo", "derive"] }
globset = "0.4.18"
ignore = "0.4"
itertools = "0.14"
mlua = { version = "0.11", features = ["lua54", "vendored", "async", "send"] }
regex = "1.12"
secrecy = "0.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
similar = { version = "3.1" }
strum = "0.28"
strum_macros = "0.28"
tokio = { version = "1.52", features = ["full"] }
tree-sitter = "0.26"
tree-sitter-bash = "0.25"
tree-sitter-c = "0.24"
tree-sitter-c-sharp = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-css = "0.25"
tree-sitter-go = "0.25"
tree-sitter-html = "0.23"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-make = "1.1"
tree-sitter-md = "0.5"
tree-sitter-php = "0.24"
tree-sitter-python = "0.25"
tree-sitter-ruby = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-sequel = "0.3"
tree-sitter-swift = "0.7"
tree-sitter-toml-ng = "0.7"
tree-sitter-typescript = "0.23"
tree-sitter-xml = "0.7"
tree-sitter-yaml = "0.7"
unidiff = "0.4"
winnow = "1.0"

[dev-dependencies]
assert_cmd = "2.2"
axum = "0.8"
libc = "0.2"
predicates = "3.1"
tempfile = "3.27.0"

[profile.dist]
inherits = "release"
lto = "thin"
