[package]
name = "blockwatch"
version = "0.3.7"
edition = "2024"
repository = "https://github.com/mennanov/blockwatch"
description = "Language agnostic linter that keeps your code and documentation in sync and valid"
homepage = "https://github.com/mennanov/blockwatch"
license = "MIT"
keywords = ["linter", "sync", "drift", "comments", "agents"]
categories = ["development-tools", "command-line-utilities"]

[workspace]
members = ["fuzz"]
# Only build/test the blockwatch crate by default. The `fuzz` member (and its
# heavy `afl` dependency) is opt-in via `-p fuzz` / `--workspace`, so plain
# `cargo build` and `cargo test` never compile it.
default-members = ["."]

[dependencies]
anyhow = "1.0"
async-openai = { version = "0.41", features = [
    "completion-types",
    "chat-completion",
] }
async-trait = "0.1"
clap = { version = "4.6", features = ["cargo", "derive"] }
globset = "0.4.18"
ignore = "0.4"
itertools = "0.15"
mlua = { version = "0.11", features = ["lua54", "vendored", "async", "send"] }
regex = "1.12"
secrecy = "0.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
similar = { version = "3.1" }
strum = "0.28"
strum_macros = "0.28"
tokio = { version = "1.52", features = ["full"] }
tree-sitter = "0.26"
tree-sitter-bash = "0.25"
tree-sitter-c = "0.24"
tree-sitter-c-sharp = "0.23"
tree-sitter-cmake = "0.7.4"
tree-sitter-containerfile = "0.9"
tree-sitter-cpp = "0.23"
tree-sitter-css = "0.25"
tree-sitter-dart = "0.2"
tree-sitter-elixir = "0.3"
tree-sitter-go = "0.25"
tree-sitter-graphql = "0.1.0"
tree-sitter-groovy = "0.1"
tree-sitter-hcl = "1.1"
tree-sitter-html = "0.23"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-lua = "0.5"
tree-sitter-make = "1.1"
tree-sitter-md = "0.5"
tree-sitter-nix = "0.3.0"
tree-sitter-php = "0.24"
tree-sitter-proto = "0.4"
tree-sitter-python = "0.25"
tree-sitter-ruby = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-scala = "0.26"
tree-sitter-sequel = "0.3"
tree-sitter-starlark = "1.3.0"
tree-sitter-swift = "0.7"
tree-sitter-toml-ng = "0.7"
tree-sitter-typescript = "0.23"
tree-sitter-xml = "0.7"
tree-sitter-yaml = "0.7"
unidiff = "0.4"
winnow = "1.0"

[dev-dependencies]
assert_cmd = "2.2"
axum = "0.8"
libc = "0.2"
predicates = "3.1"
tempfile = "3.27.0"

[patch.crates-io]
# Temporary: unidiff 0.4.0 misparses hunk body lines starting with `---`/`+++` as file
# headers (https://github.com/mennanov/blockwatch/issues/94). Remove once the upstream
# fix (https://github.com/messense/unidiff-rs/pull/10) is released on crates.io.
unidiff = { git = "https://github.com/mennanov/unidiff-rs", branch = "fix-hunk-body-lines-parsed-as-headers" }

[profile.dist]
inherits = "release"
lto = "thin"
